# cricker-os

./: CLAUDE.md  Cargo.toml  DECISIONS.md  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
bench/: baseline.txt
crates/abi/src/: lib.rs
crates/asid/: Cargo.toml
crates/asid/src/: lib.rs
crates/caps/: Cargo.toml
crates/caps/src/: lib.rs
crates/crickerfs/: Cargo.toml
crates/crickerfs/src/: lib.rs
crates/dtb/: Cargo.toml
crates/dtb/src/: lib.rs
crates/dtb/tests/: qemu_virt.rs
crates/dtb/tests/fixtures/: qemu-virt-initrd.dtb  qemu-virt.dtb
crates/elf/: Cargo.toml
crates/elf/src/: lib.rs
crates/frames/: Cargo.toml
crates/frames/src/: lib.rs
crates/frames/tests/: allocator.rs
crates/heap/: Cargo.toml
crates/heap/src/: lib.rs
crates/heap/tests/: alloc.rs  fragmentation.rs
crates/intrusive/: Cargo.toml
crates/intrusive/src/: lib.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/paging/: Cargo.toml
crates/paging/src/: lib.rs
crates/paging/tests/: mapping.rs
crates/slab/: Cargo.toml
crates/slab/src/: lib.rs
crates/slab/tests/: slab.rs
crates/slots/: Cargo.toml
crates/slots/src/: lib.rs
design/: driver-domains.md  fat-binaries.md  kernel-objects-from-untyped.md  roadmap.md
kernel/: Cargo.toml  build.rs  link.ld
kernel/src/: bench.rs  cap.rs  console.rs  cpu.rs  heap.rs  main.rs  memory.rs  panic.rs  revoke.rs  sched.rs  smp.rs  stack.rs  sync.rs  syscall.rs  testing.rs  thread.rs  untyped.rs  user.rs  virtio.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: boot.s  context.s  exceptions.rs  image_header.s  interrupts.rs  mmu.rs  mod.rs  semihosting.rs  timer.rs  vectors.s
kernel/src/drivers/: gic.rs  mod.rs  pl011.rs
notes/: README.md  aarch64.md  acronyms.md  asids.md  benchmarks.md  boot-protocol.md  capabilities.md  capability-lifecycle.md  collections.md  deadlock.md  delegation.md  device-tree.md  dma.md  elf.md  exceptions.md  frames.md  generational-names.md  heap.md  higher-half.md  interrupts.md  intrusive-queues.md  ipc-naming.md  linker-scripts.md  llvm.md  locking.md  mmu.md  no-std.md  page-tables.md  physical-memory.md  portability.md  qemu.md  quotas.md  reading-assembly.md  registers.md  scripts.md  security.md  semihosting.md  shell.md  stack.md  target-hardware.md  (+11 more)
script/: bench  bootstrap  cibuild  console  coverage  fmt  lint  server  setup  test  update  verify
scripts/: qemu-bounded.sh  qemu-runner.sh
user/: Cargo.toml  build.rs  link.ld
user/src/: hello.rs  input.rs  shell.rs  virtio.rs
xtask/: Cargo.toml
xtask/src/: main.rs
