[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
# Typed wrappers over aarch64 system registers, so we write
# `SCTLR_EL1.modify(SCTLR_EL1::M::Enable)` instead of hand-rolling `msr` and getting
# a bit position wrong. DECISIONS.md §3.
aarch64-cpu = "10"
dtb = { version = "0.1.0", path = "../crates/dtb" }
frames = { version = "0.1.0", path = "../crates/frames" }
heap = { version = "0.1.0", path = "../crates/heap" }
paging = { version = "0.1.0", path = "../crates/paging" }
spin = { version = "0.10", default-features = false, features = ["spin_mutex"] }

# Typed, compile-time-checked MMIO register blocks. An off-by-four in a device's
# register layout becomes a build error instead of a mystery at runtime.
tock-registers = "0.9"
