[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
# Typed wrappers over aarch64 system registers, so we write
# `SCTLR_EL1.modify(SCTLR_EL1::M::Enable)` instead of hand-rolling `msr` and getting
# a bit position wrong. DECISIONS.md §3.
aarch64-cpu = "11"
abi = { version = "0.1.0", path = "../crates/abi" }
caps = { version = "0.1.0", path = "../crates/caps" }
dtb = { version = "0.1.0", path = "../crates/dtb" }
elf = { version = "0.1.0", path = "../crates/elf" }
frames = { version = "0.1.0", path = "../crates/frames" }
intrusive = { version = "0.1.0", path = "../crates/intrusive" }
ipc = { version = "0.1.0", path = "../crates/ipc" }
paging = { version = "0.1.0", path = "../crates/paging" }
slots = { version = "0.1.0", path = "../crates/slots" }
spin = { version = "0.12", default-features = false, features = ["spin_mutex"] }

# Typed, compile-time-checked MMIO register blocks. An off-by-four in a device's
# register layout becomes a build error instead of a mystery at runtime.
tock-registers = "0.10"

[features]
# Boot straight to the interactive shell, skipping the milestone tour. Used by cargo xtask shell.
shell = []
